--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "firebase": "^10.7.1",
     "i": "^0.3.7",
     "npm": "^10.3.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
