--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 src/views/**/* dist/views",
     "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.8",
+    "copyfiles": "^2.4.1",
     "husky": "^8.0.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
