--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
-    "build": "tsc && copyfiles -u 1 src/views/**/* dist/views",
+    "build": "tsc && copyfiles -u 1 views/**/* dist/views",
     "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
