--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "i": "^0.3.7",
+    "node-fetch": "^2.7.0",
     "npm": "^10.3.0",
     "pre-commit": "^1.2.2",
     "pug": "^3.0.2"
