--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
+    "got": "^14.2.0",
     "i": "^0.3.7",
     "node-fetch": "^2.7.0",
     "npm": "^10.3.0",
