--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "node-fetch": "^2.7.0",
     "npm": "^10.3.0",
     "pre-commit": "^1.2.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "superagent": "^8.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
